Allow building with JDK 11